Update portfolio with modern design and responsive layout

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zwe Min Htet Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
 <body>
   <header>
     <h1>Zwe Min Htet</h1>
     <p>AL Developer | Flutter Developer | QA Enthusiast</p>
+    <nav>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
   <section id="skills">
@@ -41,5 +47,9 @@
     <p>Email: your-email@example.com</p>
     <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
   </section>
+
+  <footer>
+    <p>&copy; 2026 Zwe Min Htet</p>
+  </footer>
 </body>
 </html>
